plugins {
    id 'java'
}

group 'org.lwjgl'

configurations.default.setCanBeResolved(true)

project.setArchivesBaseName('lwjgl')

def libsDir = "${rootDir}/H2CO3/src/main/assets/app_runtime/h2co3Launcher/lwjgl"

project.setLibsDirName(libsDir)

tasks.register('buildLwjgl') { dependsOn 'jar' }
jar {
    doLast {
        archiveFileName = 'lwjgl.jar'
        manifest {
            attributes 'Manifest-Version': '3.2.4'
        }
        destinationDirectory.set(file(libsDir))
        File versionFile = file("$libsDir/version")
        versionFile.write(String.valueOf(new Date().getTime()))
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.withType(JavaExec) {
    jvmArgs += "--add-modules=jdk.unsupported"
}

dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}